Revert "Revert "Fix IE link overflow in material detail view""
This reverts commit 0837c1c7e49d87c6eb2baf25654002d8d52fadff.

--- a/front-end/app/styles/_card.scss
+++ b/front-end/app/styles/_card.scss
@@ -14,6 +14,11 @@ md-card {
     & .item-link{
       word-wrap: break-word;
       display: block;
+      word-break: break-all;
+    }
+
+    & .wrapped.regular-link{
+      display: -ms-flexbox;
     }
   }
 }
